@@ -2,6 +2,7 @@ TYPEMAP
 SSL_METHOD *	T_PTR
 const SSL_METHOD *	T_PTR
 SSL_CTX *	T_PTR
+const SSL_CTX *	T_PTR
 SSL_SESSION *	T_PTR
 SSL *		T_PTR
 RSA *		T_PTR
